--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </a>
         <a href="game3.html" class="game-card">
             <div class="icon">🎯</div>
-            <div>猜一猜</div>
+            <div>跳跳鳥</div>
         <!-- 加更多遊戲 -->
     </div>
 </body>
